--- a/package.json
+++ b/package.json
@@ -22,5 +22,11 @@
   "bugs": {
     "url": "https://github.com/mandahos/booksearcher/issues"
   },
-  "homepage": "https://github.com/mandahos/booksearcher#readme"
+  "homepage": "https://github.com/mandahos/booksearcher#readme",
+  "dependencies": {
+    "apollo-server-express": "^3.1.2",
+    "express": "^4.17.1",
+    "graphql": "^15.5.1",
+    "if-env": "^1.0.4"
+  }
 }
