--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
   },
   "homepage": "https://github.com/mandahos/booksearcher#readme",
   "dependencies": {
-    "apollo-server-express": "^3.1.2",
+    "apollo-server-express": "^2.25.2",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "jsonwebtoken": "^8.5.1"
   }
 }
