--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "apollo-server-express": "^2.25.2",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
+    "graphql-tag": "^2.12.5",
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1"
   }
