--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.4.1",
     "graphql": "^15.5.1",
     "graphql-tag": "^2.12.5",
+    "if-env": "^1.0.4",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
